--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         </div>
 
         <div class="form__group field mb-5">
-            <input type="input" class="form__field" placeholder="Name" name="name" id='name' required />
+            <input id="searchBar" type="input" class="form__field" placeholder="Name" name="name" id='name' required />
             <label for="name" class="form__label">Search</label>
         </div>
 
