display list added

--- a/index.html
+++ b/index.html
@@ -101,11 +101,11 @@
 
       <section id="userField" class="container mb-5">
         <ul id="itemsList"class="list-group">
-            <li class="list-group-item ">C</li>
+            <!-- <li class="list-group-item ">C</li>
             <li class="list-group-item ">B</li>
             <li class="list-group-item ">K</li>
             <li class="list-group-item ">L</li>
-            <li class="list-group-item ">A</li>
+            <li class="list-group-item ">A</li> -->
           </ul>
       </section>
     
