--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </div>
 
         <div class="middle">
-            <button id="btn" class="btn btn1">Hover Me</button>
+            <button id="btn" class="sortBtn btn btn1">Sort</button>
         </div>
       </section>
 
