--- a/user.html
+++ b/user.html
@@ -1,94 +1,114 @@
 <!DOCTYPE html>
 <html>
+  <head>
+    <title>Orhan Örs</title>
 
-<head>
-  <title>Orhan Örs</title>
-  
-  <meta name="viewport" content="width=device-width,initial-scale=1.0">
-  <link href="https://fonts.googleapis.com/css?family=Nunito:300,400,500,600,700" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro:300" rel="stylesheet">
-  <link rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
- <link rel="stylesheet" href="./css/user.css">
-</head>
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Nunito:300,400,500,600,700"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Source+Code+Pro:300"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link rel="stylesheet" href="./css/user.css" />
+  </head>
 
-<body>
-  <div class="header-container">
-    <h1 class="header-title">Orhan Örs</h1>
+  <body>
+    <div class="header-container">
+      <h1 class="header-title">Orhan Örs</h1>
 
-    <div class="social-media-icons">
-      <a class="icon" href="https://github.com/orhanors"
-      target="_blank">
-        <i class="fa fa-github"></i>
-      </a>
-      <a class="icon" href="https://www.linkedin.com/in/orhan-örs-564031153" target="_blank">
-        <i class="fa fa-linkedin"></i>
-      </a>
-      <a class="icon" href="https://www.facebook.com/orhnrs"
-      target="_blank">
-        <i class="fa fa-facebook"></i>
-      </a>
-      <a class="icon" href="mailto:orsorhan1@gmail.com">
-        <i class="fa fa-envelope"></i>
-      </a>
+      <div class="social-media-icons">
+        <a class="icon" href="https://github.com/orhanors" target="_blank">
+          <i class="fa fa-github"></i>
+        </a>
+        <a
+          class="icon"
+          href="https://www.linkedin.com/in/orhan-örs-564031153"
+          target="_blank"
+        >
+          <i class="fa fa-linkedin"></i>
+        </a>
+        <a class="icon" href="https://www.facebook.com/orhnrs" target="_blank">
+          <i class="fa fa-facebook"></i>
+        </a>
+        <a class="icon" href="mailto:orsorhan1@gmail.com">
+          <i class="fa fa-envelope"></i>
+        </a>
+      </div>
+
+      <p class="header-intro">
+        I am a fresh graduate from
+        <a href="https://bilmuh.ege.edu.tr/" target="_blank"
+          >University of Ege - Computer Engiinering</a
+        >.
+        <br />
+        I made this page because of to apply
+        <a href="https://strive.school/" target="_blank">Strive School </a>
+        which is a great project to help me to go to Berlin
+      </p>
     </div>
 
-    <p class="header-intro">I am a fresh graduate from
-    <a href="https://bilmuh.ege.edu.tr/" target="_blank">University of Ege - Computer Engiinering</a>.
-    <br>
-    I made this page because of to apply 
-   <a href="https://strive.school/" target="_blank">Strive School </a> 
-   which is a great project to help me to go to Berlin </p>
-  </div>
-
-  <div class="about-container">
-    <div class="about-terminal">
-      <div class="terminal-header">
-        <div class="terminal-header-button" style="background-color: #f96256;"></div>
-        <div class="terminal-header-button" style="background-color: #fdbc3d;"></div>
-        <div class="terminal-header-button" style="background-color: #33c948;"></div>
-      </div>
-      <div class="terminal-window">
-        <div class="statement">
-          <p class="input-statement">Orhan.age</p>
-          <p class="output-statement">
-            24
-          </p>
+    <div class="about-container">
+      <div class="about-terminal">
+        <div class="terminal-header">
+          <div
+            class="terminal-header-button"
+            style="background-color: #f96256"
+          ></div>
+          <div
+            class="terminal-header-button"
+            style="background-color: #fdbc3d"
+          ></div>
+          <div
+            class="terminal-header-button"
+            style="background-color: #33c948"
+          ></div>
         </div>
-        <div class="statement">
-          <p class="input-statement">Orhan.location</p>
-          <p class="output-statement">
-            "Gaziantep, Turkey"
-          </p>
-        </div>
-        <div class="statement">
-          <p class="input-statement">Orhan.resume</p>
-          <p class="output-statement">
-            "<a href="./Orhan_Örs.pdf" target="_blank">Orhan_Örs.pdf</a>"
-          </p>
-        </div>
-        <div class="statement">
-          <p class="input-statement">Orhan.education</p>
-          <p class="output-statement">
-            "Bachelor's Degree - University of Ege"
-          </p>
-        </div>
-        <div class="statement">
-          <p class="input-statement">Orhan.skills</p>
-          <p class="output-statement">
-            ["Python", "Java", "Machine Learning","Data Analysis" "Basic Cloud Computing"]
-          </p>
+        <div class="terminal-window">
+          <div class="statement">
+            <p class="input-statement">Orhan.age</p>
+            <p class="output-statement">24</p>
+          </div>
+          <div class="statement">
+            <p class="input-statement">Orhan.location</p>
+            <p class="output-statement">"Gaziantep, Turkey"</p>
+          </div>
+          <div class="statement">
+            <p class="input-statement">Orhan.resume</p>
+            <p class="output-statement">
+              "<a href="./Orhan_Örs.pdf" target="_blank">Orhan_Örs.pdf</a>"
+            </p>
+          </div>
+          <div class="statement">
+            <p class="input-statement">Orhan.education</p>
+            <p class="output-statement">
+              "Bachelor's Degree - University of Ege"
+            </p>
+          </div>
+          <div class="statement">
+            <p class="input-statement">Orhan.skills</p>
+            <p class="output-statement">
+              ["Python", "Java", "Machine Learning","Data Analysis" "Basic Cloud
+              Computing"]
+            </p>
+          </div>
         </div>
       </div>
     </div>
-  </div>
 
-  <div class="project-title-container">
-    <h1>More About <b>Orhan</b></h1>
-  </div>
+    <div class="project-title-container">
+      <h1>More About <b>Orhan</b></h1>
+    </div>
 
-  <div class="footer">
-    <p>Made by Orhan Örs © 2020</p>
-  </div>
-
-</body>
+    <div class="footer">
+      <p>Made by Orhan Örs © 2020</p>
+    </div>
+    <script src="./js/user.js"></script>
+  </body>
+</html>
